--- a/public/admin.html
+++ b/public/admin.html
@@ -1,28 +1,113 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: sans-serif; background: #f0f0f0; padding: 20px; }
-        label, input { display: block; margin: 10px 0; }
-        button { padding: 10px 20px; margin-top: 20px; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Laserpointer Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #111;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    .slider-group {
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin: 8px 0 4px;
+    }
+    input[type="range"] {
+      width: 80%;
+    }
+    input[type="number"] {
+      width: 60px;
+      margin-left: 10px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 20px;
+      background: red;
+      color: white;
+      border: none;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-    <h2>Laser Admin Panel</h2>
-    <label>Links (min X): <input id="minX" type="number" value="0"></label>
-    <label>Rechts (max X): <input id="maxX" type="number" value="1"></label>
-    <label>Oben (min Y): <input id="minY" type="number" value="0"></label>
-    <label>Unten (max Y): <input id="maxY" type="number" value="1"></label>
-    <button onclick="clearCanvas()">Alles löschen</button>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-        function clearCanvas() {
-            socket.emit('clear');
-        }
-    </script>
+  <h2>Laserpointer Kalibrierung</h2>
+
+  <div class="slider-group">
+    <label>Links (γ min / gammaMin)</label>
+    <input id="gammaMinSlider" type="range" min="-90" max="0" value="-30">
+    <input id="gammaMinInput" type="number" value="-30">
+  </div>
+
+  <div class="slider-group">
+    <label>Rechts (γ max / gammaMax)</label>
+    <input id="gammaMaxSlider" type="range" min="0" max="90" value="30">
+    <input id="gammaMaxInput" type="number" value="30">
+  </div>
+
+  <div class="slider-group">
+    <label>Oben (β min / betaMin)</label>
+    <input id="betaMinSlider" type="range" min="-90" max="0" value="-20">
+    <input id="betaMinInput" type="number" value="-20">
+  </div>
+
+  <div class="slider-group">
+    <label>Unten (β max / betaMax)</label>
+    <input id="betaMaxSlider" type="range" min="0" max="90" value="40">
+    <input id="betaMaxInput" type="number" value="40">
+  </div>
+
+  <button onclick="clearCanvas()">Alles löschen</button>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+
+    const settings = {
+      gammaMin: -30,
+      gammaMax: 30,
+      betaMin: -20,
+      betaMax: 40
+    };
+
+    function emitCalibration() {
+      socket.emit("calibration", settings);
+    }
+
+    function setupControl(sliderId, inputId, key) {
+      const slider = document.getElementById(sliderId);
+      const input = document.getElementById(inputId);
+      slider.addEventListener("input", () => {
+        settings[key] = parseFloat(slider.value);
+        input.value = slider.value;
+        emitCalibration();
+      });
+      input.addEventListener("input", () => {
+        settings[key] = parseFloat(input.value);
+        slider.value = input.value;
+        emitCalibration();
+      });
+    }
+
+    setupControl("gammaMinSlider", "gammaMinInput", "gammaMin");
+    setupControl("gammaMaxSlider", "gammaMaxInput", "gammaMax");
+    setupControl("betaMinSlider", "betaMinInput", "betaMin");
+    setupControl("betaMaxSlider", "betaMaxInput", "betaMax");
+
+    function clearCanvas() {
+      socket.emit("clear");
+    }
+
+    // Beim Laden direkt senden
+    emitCalibration();
+  </script>
 </body>
 </html>
