--- a/public/control.html
+++ b/public/control.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Laserpointer v2.8</title>
+  <title>Laserpointer v3.0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v2.8</div>
+  <div id="version">v3.0</div>
   <h2>Laserpointer Steuerung</h2>
   <div id="colorPicker"></div>
   <button id="toggleMode">Modus: Touch</button>
@@ -75,7 +75,12 @@
     let currentColor = "red";
     let mode = "touch"; // "touch" or "motion"
     let isDrawing = false;
-    let x = 150, y = 150;
+    let calibration = {
+      gammaMin: -30,
+      gammaMax: 30,
+      betaMin: -20,
+      betaMax: 40
+    };
 
     const drawarea = document.getElementById("drawarea");
     const laserBtn = document.getElementById("laserBtn");
@@ -97,7 +102,7 @@
 
     toggleBtn.addEventListener("click", () => {
       mode = mode === "touch" ? "motion" : "touch";
-      toggleBtn.textContent = "Modus: " + (mode === "touch" ? "Touch" : "Bewegung");
+      toggleBtn.textContent = "Modus: " + (mode === "touch" ? "Touch" : "Laser");
       laserBtn.style.display = (mode === "motion") ? "block" : "none";
     });
 
@@ -122,23 +127,24 @@
       }
     }
 
-    // Reine Bewegung (acceleration ohne Gravity)
-    window.addEventListener("devicemotion", event => {
+    window.addEventListener("deviceorientation", (event) => {
       if (mode !== "motion" || !isDrawing) return;
-      const ax = event.acceleration.x || 0;
-      const ay = event.acceleration.y || 0;
 
-      x += ax * 5;   // Horizontal bewegen (schneller)
-      y += -ay * 5;  // Vertikal bewegen (oben = kleiner)
+      const gamma = event.gamma; // links/rechts
+      const beta = event.beta;   // oben/unten
 
-      const rect = drawarea.getBoundingClientRect();
-      x = Math.max(0, Math.min(x, rect.width));
-      y = Math.max(0, Math.min(y, rect.height));
+      const normX = (gamma - calibration.gammaMin) / (calibration.gammaMax - calibration.gammaMin);
+      const normY = (beta - calibration.betaMin) / (calibration.betaMax - calibration.betaMin);
 
-      const nx = x / rect.width;
-      const ny = y / rect.height;
+      const x = Math.min(1, Math.max(0, normX));
+      const y = Math.min(1, Math.max(0, normY));
 
-      socket.emit("draw", { x: nx, y: ny, color: currentColor });
+      socket.emit("draw", { x: x, y: y, color: currentColor });
+    });
+
+    socket.on("calibration", (data) => {
+      calibration = data;
+      console.log("Neue Kalibrierung:", calibration);
     });
   </script>
 </body>
