--- a/public/control.html
+++ b/public/control.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Laserpointer v3.0</title>
+  <title>Laserpointer Accel v1.0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
@@ -27,23 +27,24 @@
       border: 2px solid white;
       margin: 5px;
     }
-    #toggleMode {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-    }
-    #laserBtn {
+    #laserBtn, #resetBtn {
       position: absolute;
-      top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
+      transform: translateX(-50%);
+      width: 100px;
+      height: 50px;
       font-size: 0.8rem;
       background: red;
       color: white;
       border: 2px solid black;
-      display: none;
+      border-radius: 10px;
+    }
+    #laserBtn {
+      bottom: 80px;
+    }
+    #resetBtn {
+      bottom: 20px;
+      background: #444;
     }
     #drawarea {
       margin: 1rem auto;
@@ -62,29 +63,22 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.0</div>
-  <h2>Laserpointer Steuerung</h2>
+  <div id="version">vAccel1.0</div>
+  <h2>Laserpointer Bewegung</h2>
   <div id="colorPicker"></div>
-  <button id="toggleMode">Modus: Touch</button>
   <button id="laserBtn">Laser</button>
+  <button id="resetBtn">Zentrum</button>
   <div id="drawarea"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     let currentColor = "red";
-    let mode = "touch"; // "touch" or "motion"
     let isDrawing = false;
-    let calibration = {
-      gammaMin: -30,
-      gammaMax: 30,
-      betaMin: -20,
-      betaMax: 40
-    };
 
     const drawarea = document.getElementById("drawarea");
     const laserBtn = document.getElementById("laserBtn");
-    const toggleBtn = document.getElementById("toggleMode");
+    const resetBtn = document.getElementById("resetBtn");
     const colors = [
       "red", "green", "blue", "yellow", "magenta", "cyan", "white", "black",
       "orange", "purple", "lime", "pink", "brown", "gray", "lightblue", "gold"
@@ -100,51 +94,42 @@
       colorPicker.appendChild(c);
     });
 
-    toggleBtn.addEventListener("click", () => {
-      mode = mode === "touch" ? "motion" : "touch";
-      toggleBtn.textContent = "Modus: " + (mode === "touch" ? "Touch" : "Laser");
-      laserBtn.style.display = (mode === "motion") ? "block" : "none";
-    });
-
     laserBtn.addEventListener("touchstart", () => isDrawing = true);
     laserBtn.addEventListener("touchend", () => isDrawing = false);
+    resetBtn.addEventListener("touchstart", resetPosition);
 
-    drawarea.addEventListener("touchstart", e => {
-      if (mode !== "touch") return;
-      handleTouch(e.touches[0]);
-    });
-    drawarea.addEventListener("touchmove", e => {
-      if (mode !== "touch") return;
-      handleTouch(e.touches[0]);
-    });
+    // Position & Bewegung
+    let posX = 0.5, posY = 0.5;     // Start in der Mitte (0–1)
+    let velX = 0, velY = 0;
 
-    function handleTouch(touch) {
-      const rect = drawarea.getBoundingClientRect();
-      const tx = (touch.clientX - rect.left) / rect.width;
-      const ty = (touch.clientY - rect.top) / rect.height;
-      if (tx >= 0 && tx <= 1 && ty >= 0 && ty <= 1) {
-        socket.emit("draw", { x: tx, y: ty, color: currentColor });
-      }
+    function resetPosition() {
+      posX = 0.5;
+      posY = 0.5;
+      velX = 0;
+      velY = 0;
     }
 
-    window.addEventListener("deviceorientation", (event) => {
-      if (mode !== "motion" || !isDrawing) return;
+    window.addEventListener("devicemotion", (event) => {
+      if (!isDrawing) return;
+      const ax = event.acceleration.x || 0;
+      const ay = event.acceleration.y || 0;
 
-      const gamma = event.gamma; // links/rechts
-      const beta = event.beta;   // oben/unten
+      // Zeitschritt simulieren
+      velX += ax * 0.02;
+      velY += -ay * 0.02;
 
-      const normX = (gamma - calibration.gammaMin) / (calibration.gammaMax - calibration.gammaMin);
-      const normY = (beta - calibration.betaMin) / (calibration.betaMax - calibration.betaMin);
+      // Dämpfung (Reibung)
+      velX *= 0.9;
+      velY *= 0.9;
 
-      const x = Math.min(1, Math.max(0, normX));
-      const y = Math.min(1, Math.max(0, normY));
+      posX += velX * 0.02;
+      posY += velY * 0.02;
 
-      socket.emit("draw", { x: x, y: y, color: currentColor });
-    });
+      // Begrenzen
+      posX = Math.max(0, Math.min(1, posX));
+      posY = Math.max(0, Math.min(1, posY));
 
-    socket.on("calibration", (data) => {
-      calibration = data;
-      console.log("Neue Kalibrierung:", calibration);
+      socket.emit("draw", { x: posX, y: posY, color: currentColor });
     });
   </script>
 </body>
