--- a/public/display.html
+++ b/public/display.html
@@ -1,57 +1,41 @@
-
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Laser Display</title>
   <style>
-    html, body {
+    body, html {
       margin: 0;
       padding: 0;
       overflow: hidden;
       background: black;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    #version {
-      position: absolute;
-      top: 8px;
-      right: 12px;
-      font-size: 0.9em;
-      background: #eee;
-      padding: 4px 8px;
-      border-radius: 6px;
-      font-weight: bold;
-      z-index: 10;
-      color: black;
     }
     canvas {
-      width: 90vmin;
-      height: 90vmin;
-      background: black;
       display: block;
     }
   </style>
 </head>
 <body>
-  <div id="version">Version: v1.8</div>
-  <canvas id="canvas" width="900" height="900"></canvas>
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <canvas id="displayCanvas"></canvas>
+  <script src="/socket.io/socket.io.js"></script>
   <script>
-    const canvas = document.getElementById("canvas");
+    const socket = io();
+    const canvas = document.getElementById("displayCanvas");
     const ctx = canvas.getContext("2d");
 
-    const socket = io();
+    function resizeCanvas() {
+      const size = Math.min(window.innerWidth, window.innerHeight);
+      canvas.width = size;
+      canvas.height = size;
+    }
+
+    resizeCanvas();
+    window.addEventListener("resize", resizeCanvas);
 
     socket.on("draw", (data) => {
-      const px = data.x * canvas.width;
-      const py = data.y * canvas.height;
-      console.log("received draw", px, py, data.color);
-      ctx.fillStyle = data.color;
+      ctx.fillStyle = data.color || "red";
       ctx.beginPath();
-      ctx.arc(px, py, 10, 0, Math.PI * 2);
+      ctx.arc(data.x, data.y, 5, 0, 2 * Math.PI);
       ctx.fill();
     });
 
