--- a/public/debug.html
+++ b/public/debug.html
@@ -1,26 +1,20 @@
-
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Gyro Debug</title>
+  <meta charset="UTF-8" />
+  <title>Sensor Debug</title>
   <script src="/socket.io/socket.io.js"></script>
-  <style>
-    body { background: #111; color: #0f0; font-family: monospace; padding: 20px; }
-    .log { white-space: pre-wrap; }
-  </style>
 </head>
 <body>
-  <h1>Sensor-Daten-Viewer</h1>
-  <div class="log" id="log">Warte auf Daten...</div>
+  <h2>Empfangene Gyro-Daten:</h2>
+  <pre id="output">Warte auf Daten…</pre>
+
   <script>
     const socket = io();
-    const logDiv = document.getElementById('log');
+    const output = document.getElementById("output");
 
-    socket.on('sensorDump', data => {
-      const time = new Date(data.timestamp).toLocaleTimeString();
-      const content = `[${time}] ${data.type.toUpperCase()}\n${JSON.stringify(data, null, 2)}\n\n`;
-      logDiv.textContent = content + logDiv.textContent.slice(0, 5000);
+    socket.on("sensorDump", (data) => {
+      output.textContent = JSON.stringify(data, null, 2);
     });
   </script>
 </body>
