--- a/public/control.html
+++ b/public/control.html
@@ -1,148 +1,124 @@
-
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Laserpointer v3.1</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laserpointer Control (Auto-Kalibrierung)</title>
+  <script src="/socket.io/socket.io.js"></script>
   <style>
-    body {
-      background: black;
-      color: white;
-      font-family: sans-serif;
+    html, body {
       margin: 0;
       padding: 0;
-      text-align: center;
+      background: #111;
       overflow: hidden;
+      height: 100%;
     }
-    #colorPicker {
+    #canvasContainer {
+      position: relative;
+      width: 100vmin;
+      height: 100vmin;
+      margin: auto;
+      border: 1px solid #444;
+      background: #000;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
+    #controls {
+      position: fixed;
+      top: 10px;
+      left: 10px;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 10px;
+      gap: 10px;
     }
     .color {
       width: 30px;
       height: 30px;
       border-radius: 50%;
       border: 2px solid white;
-      margin: 4px;
     }
-    #toggleMode {
-      margin-top: 10px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      background: #444;
-      color: white;
-      font-size: 14px;
-    }
-    #laserBtn {
-      position: absolute;
-      top: 50%;
+    #laserButton {
+      position: fixed;
       left: 50%;
-      transform: translate(-50%, -50%);
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
+      transform: translateX(-50%);
+      bottom: 25%;
+      width: 80px;
+      height: 80px;
+      border-radius: 40px;
       background: red;
       border: none;
-    }
-    #drawarea {
-      margin: 10px auto;
-      width: 90vmin;
-      height: 90vmin;
-      border: 2px dashed white;
-      touch-action: none;
-      position: relative;
-    }
-    #version {
-      position: absolute;
-      top: 8px;
-      right: 12px;
-      font-size: 12px;
-      opacity: 0.5;
     }
   </style>
 </head>
 <body>
-  <div id="version">v3.1</div>
-  <h2>Laserpointer Steuerung</h2>
-  <div id="colorPicker"></div>
-  <button id="toggleMode">Touch</button>
-  <button id="laserBtn"></button>
-  <div id="drawarea"></div>
+  <div id="canvasContainer">
+    <canvas id="canvas" width="500" height="500"></canvas>
+  </div>
+  <div id="controls">
+    <div class="color" style="background:red" onclick="setColor('red')"></div>
+    <div class="color" style="background:green" onclick="setColor('green')"></div>
+    <div class="color" style="background:blue" onclick="setColor('blue')"></div>
+    <div class="color" style="background:yellow" onclick="setColor('yellow')"></div>
+  </div>
+  <button id="laserButton"></button>
 
-  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    let color = 'red';
-    let mode = 'touch'; // 'touch' or 'motion'
-    let drawing = false;
-    let calib = { xMin: -10, xMax: 10, zMin: -10, zMax: 10 };
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    let color = "red";
+    let laserActive = false;
+    let calibrated = false;
+    let alpha0 = 0, beta0 = 0;
 
-    // receive calibration
-    socket.on('calibration', data => {
-      calib = data;
-      console.log('Calibration updated', calib);
+    document.getElementById("laserButton").addEventListener("touchstart", e => {
+      e.preventDefault();
+      laserActive = true;
+      if (!calibrated && currentAlpha !== null && currentBeta !== null) {
+        alpha0 = currentAlpha;
+        beta0 = currentBeta;
+        calibrated = true;
+        console.log("Kalibriert:", alpha0, beta0);
+      }
     });
 
-    const colors = ['red','green','blue','yellow','magenta','cyan','white','black','orange','purple','lime','pink','brown','gray','lightblue','gold'];
-    const picker = document.getElementById('colorPicker');
-    colors.forEach(c => {
-      const el = document.createElement('div');
-      el.className = 'color';
-      el.style.background = c;
-      el.onclick = () => color = c;
-      picker.appendChild(el);
+    document.getElementById("laserButton").addEventListener("touchend", e => {
+      e.preventDefault();
+      laserActive = false;
     });
 
-    const toggleBtn = document.getElementById('toggleMode');
-    const laserBtn = document.getElementById('laserBtn');
-    const drawarea = document.getElementById('drawarea');
-
-    toggleBtn.onclick = () => {
-      mode = (mode === 'touch' ? 'motion' : 'touch');
-      toggleBtn.textContent = (mode === 'touch' ? 'Touch' : 'Motion');
-      laserBtn.style.display = (mode === 'motion' ? 'block' : 'none');
-    };
-
-    // touch drawing
-    drawarea.addEventListener('touchstart', e => {
-      if (mode !== 'touch') return;
-      e.preventDefault();
-      drawing = true; handleTouch(e.touches[0]);
-    }, {passive:false});
-    drawarea.addEventListener('touchmove', e => {
-      if (mode !== 'touch' || !drawing) return;
-      e.preventDefault();
-      handleTouch(e.touches[0]);
-    }, {passive:false});
-    drawarea.addEventListener('touchend', () => { drawing=false; });
-
-    function handleTouch(t) {
-      const r = drawarea.getBoundingClientRect();
-      const nx = (t.clientX - r.left) / r.width;
-      const ny = (t.clientY - r.top) / r.height;
-      socket.emit('draw',{x:nx,y:ny,color});
+    function setColor(c) {
+      color = c;
     }
 
-    // motion drawing
-    laserBtn.addEventListener('touchstart', () => drawing=true);
-    laserBtn.addEventListener('touchend', () => drawing=false);
+    let currentAlpha = null, currentBeta = null;
 
-    window.addEventListener('devicemotion', ev => {
-      if (mode!=='motion' || !drawing) return;
-      const acc = ev.acceleration; 
-      if (!acc) return;
-      const x = acc.x || 0;
-      const z = acc.z || 0;
-      // map x to horizontal
-      let nx = (x - calib.xMin)/(calib.xMax - calib.xMin);
-      let nz = (z - calib.zMin)/(calib.zMax - calib.zMin);
-      nx = Math.max(0,Math.min(1,nx));
-      nz = Math.max(0,Math.min(1,nz));
-      socket.emit('draw',{x:nx,y:nz,color});
+    window.addEventListener("deviceorientation", e => {
+      currentAlpha = e.alpha;
+      currentBeta = e.beta;
+
+      if (laserActive && calibrated) {
+        const relAlpha = currentAlpha - alpha0;
+        const relBeta = currentBeta - beta0;
+
+        // Mapping zu Canvas
+        const x = canvas.width / 2 + relAlpha * 5;
+        const y = canvas.height / 2 + relBeta * 5;
+
+        socket.emit("draw", { x, y, color });
+      }
+    });
+
+    // Zeichnen lokaler Punkt (optional)
+    socket.on("draw", data => {
+      ctx.fillStyle = data.color;
+      ctx.beginPath();
+      ctx.arc(data.x, data.y, 4, 0, 2 * Math.PI);
+      ctx.fill();
+    });
+
+    socket.on("clear", () => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
     });
   </script>
 </body>
